first maps working

--- a/packages/koop-core/views/layout.ejs
+++ b/packages/koop-core/views/layout.ejs
@@ -15,8 +15,12 @@
 		<!-- Templates from your view path are included here -->
 		<%- assets.templateLibrary() %>
 		<!-- Javascripts from your assets folder are included here -->
-		<%- assets.js() %>
-		
+    <script type="text/javascript" src="/assets/js/jquery-1.8.3.js"></script>
+    <script type="text/javascript" src="/assets/js/leaflet.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/esri-leaflet.min.js"></script>
+    <script type="text/javascript" src="/assets/js/map.js"></script>
+	
     <%- body %>
 	</body>
 </html>
