--- a/views/demo/github.ejs
+++ b/views/demo/github.ejs
@@ -1,1 +1,7 @@
-DEMO GITJHB
+<div id="map"></div>
+<script>
+  var mapDom = 'map';
+  $('#'+mapDom).css({ width:document.width, height: document.height });
+  var koop = koopMap( mapDom );
+  koop.add(location.origin + '/github/<%= user %>/<%= repo %>/<%= file %>/FeatureServer/0');
+</script>
