working previews and such

--- a/packages/koop-core/views/github/index.ejs
+++ b/packages/koop-core/views/github/index.ejs
@@ -1,7 +1,7 @@
 
 <div id="map"></div>
   <div class="load-form">
-    <input type="text" id="gist" class="form-control pull-left" placeholder="Enter a user/repo/file" style="width:200px">
+    <input type="text" id="github" class="form-control pull-left" placeholder="Enter a user/repo/file" style="width:225px">
     <button class="btn btn-primary pull-right" onClick="load()">Load</button>
   </div>
 
