--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -21,3 +21,11 @@ input.sample-input {
   top: 10px;
   left:45px;
 }
+
+#map {
+  position:fixed; 
+  top:0px; 
+  left:0px; 
+  right:0px; 
+  bottom:0px;
+}
