--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -58,6 +58,14 @@
           <li>Github: <a href="/github" target="_blank">/github</a></li>
         </ul>
 
+      <h3>Spatial Queries</h3>
+
+        <li><a href="http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,90,180,90" target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,90,180,90</a></li>
+
+      <h3>Filter Queries</h3>
+        
+        <li><a href='http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=Zip="60647"' target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=Zip="60647"</a></li>
+
       <h3>Query parameters</h3>
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
