--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -64,7 +64,7 @@
 
       <h3>Filter Queries</h3>
         
-        <li><a href='http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=Zip="60647"' target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=Zip="60647"</a></li>
+        <li><a href='http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=ZIP=60647' target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?where=ZIP=60647</a></li>
 
       <h3>Query parameters</h3>
         <div class="accordion" id="accordion2">
