images fix and favicon

--- a/packages/koop-core/views/layout.ejs
+++ b/packages/koop-core/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title><%= title %></title>
+		<title>Koop</title>
 
 		<!-- Viewport mobile tag for sensible mobile support -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -22,6 +22,6 @@
     <script type="text/javascript" src="/js/esri-leaflet.min.js"></script>
     <script type="text/javascript" src="/js/map.js"></script>
 	
-    <%= body %>
+    <%- body %>
 	</body>
 </html>
