topojson preview working

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="/js/leaflet.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/esri-leaflet.min.js"></script>
+    <script type="text/javascript" src="/js/topojson.v1.min.js"></script>
     <script type="text/javascript" src="/linker/js/map.js"></script>
 	
     <%- body %>
