--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,7 @@
 		<!-- Javascripts from your assets folder are included here -->
     <script type="text/javascript" src="/js/jquery-1.8.3.js"></script>
     <script type="text/javascript" src="/js/leaflet.js"></script>
+    <script type="text/javascript" src="/js/leaflet.utfgrid.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/esri-leaflet.min.js"></script>
     <script type="text/javascript" src="/js/topojson.v1.min.js"></script>
