fixed spatial queries examples

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -60,7 +60,7 @@
 
       <h3>Spatial Queries</h3>
 
-        <li><a href="http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,90,180,90" target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,90,180,90</a></li>
+        <li><a href="http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,-90,180,90" target="_blank">http://koop.dc.esri.com/github/smartchicago/chicago-atlas/db::import::zipcodes/FeatureServer/0/query?geometry=-180,-90,180,90</a></li>
 
       <h3>Filter Queries</h3>
         
